<resources>
    <string name="app_name">中央美术学院</string>

    <string name="password">请输入密码</string>
    <string name="again_password">再次输入密码</string>
    <string name="Login">登录</string>
    <string name="regist"><u>注册</u></string>
    <string name="forgot_pwd">忘记密码</string>

    <string name="request_error">请求失去响应，请检测当前网络环境</string>
    <string name="request_error_net">访问服务器失败!</string>
    <string name="request_fail">登录超时,请退出重新登录</string>

    <string name="title_activity_study_shearch">StudyShearchActivity</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="getFail">获取失败</string>
    <string name="check_net">请检查网络</string>
    <string name="nonet_check_please">当前无网络连接，请检查网络状态</string>
    <string name="code_success">验证码验证成功</string>
    <string name="send_code">验证码已经发送</string>
    <string name="code_error">验证码错误</string>
    <string name="get_code_fail">获取验证码失败</string>
    <string name="input_study_num">请输入学号</string>
    <string name="input_phone_num">请输入电话号码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="again_pwd_fail">两次密码不一致</string>
    <string name="net_fail">请检查网络连接</string>
    <string name="update_success">修改成功</string>
    <string name="phone_error">非法手机号</string>
    <string name="get_code">获取验证码</string>
    <string name="first_check_phone">请先验证手机</string>
    <string name="delete_num">删除(%d)</string>
    <string name="no_get_group_info">没有获取到群信息</string>
    <string name="select_delete_friend">请选择您要删除的好友</string>
    <string name="part_delete_success">部分删除成功</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="delete">删除</string>
    <string name="no_content">没有找到内容</string>
    <string name="input_num_or_phone">请输入学号或手机号</string>
    <string name="login_error">用户名或密码错误</string>
    <string name="loding">正在加载中……</string>
    <string name="preview_app">以游客身份访问</string>
    <string name="Confirm_pwd">确认密码</string>
    <string name="new_pwd">新密码</string>
    <string name="to_send_code">发送验证码</string>
    <string name="sms_code">短信验证码</string>
    <string name="phone_num">手机号</string>
    <string name="study_num">学号</string>
    <string name="tag_study">学习</string>
    <string name="tag_resource">资源</string>
    <string name="tag_contact">通讯录</string>
    <string name="tag_index">官网</string>
    <string name="tag_me">我的</string>
    <string name="login_timeout">登录超时，请重新登录</string>
    <string name="connect_rong_fail">连接融云服务器失败</string>
    <string name="hint">提示</string>
    <string name="is_login">游客无法预览，是否登录？</string>
    <string name="is_download_nowifi">是否要用流量进行下载更新</string>
    <string name="kaifa">正在建设中，敬请期待</string>
    <string name="all">全部</string>
    <string name="t_class">班级</string>
    <string name="ji_gou">机构</string>
    <string name="zong_he">综合</string>
    <string name="get_fail">获取失败</string>
    <string name="constact">联系人：%d</string>
    <string name="no_contact">您还没有联系人，去添加吧！</string>
    <string name="title_contact">通讯录</string>
    <string name="refresh_fail">同步更新设置失败</string>
    <string name="parsing_fail">数据解析错误</string>
    <string name="menu_refresh_success">设置菜单同步成功</string>
    <string name="syn">同步</string>
    <string name="exit">退出登录</string>
    <string name="phone">电话</string>
    <string name="nickname">昵称</string>
    <string name="input">请输入</string>
    <string name="search">搜索</string>
    <string name="no_user">该用户不存在</string>
    <string name="shearch_content">搜索制定内容</string>
    <string name="user">用户</string>
    <string name="detail_info">详细资料</string>
    <string name="new_friends">新的朋友</string>
    <string name="add_success">添加成功</string>
    <string name="add_fail">添加失败</string>
    <string name="refuse_call_permission">您拒绝了拨打电话权限</string>
    <string name="nick">昵称：</string>
    <string name="remark">备注信息：</string>
    <string name="remark_phone">备注电话：</string>
    <string name="setting">设置</string>
    <string name="request_list">请求列表</string>
    <string name="create_group">创建群组</string>
    <string name="string_lt_10">最多输入10个字符</string>
    <string name="string_gt_2">最少输入2个字符</string>
    <string name="common_group">普通群</string>
    <string name="class_group">班级群</string>
    <string name="group_name_error">群名称不符合要求</string>
    <string name="upload_avatar">请上传群头像</string>
    <string name="refused_camera_permission">您拒绝了拍照权限</string>
    <string name="input_group_name">请输入群名称(2-10字)</string>
    <string name="persion_typing">对方正在输入...</string>
    <string name="persion_talking">对方正在讲话...</string>
    <string name="chat_room">聊天室</string>
    <string name="feedback">意见反馈</string>
    <string name="chat">聊天</string>
    <string name="no_discussion">不在讨论组中</string>
    <string name="Discussion">讨论组</string>
    <string name="bulletin">公告</string>
    <string name="events">活动</string>
    <string name="server_connection_error">服务器连接失败，请稍候再试</string>
    <string name="setting_success">设置成功</string>
    <string name="remark_name">备注信息</string>
    <string name="update_fail">修改失败</string>
    <string name="quit_group">退出群组</string>
    <string name="exit_and_dismiss">解散并退出</string>
    <string name="group_img">群头像</string>
    <string name="group_name">群名称</string>
    <string name="group_description">群描述</string>
    <string name="group_file_list">群文件列表</string>
    <string name="setting_manager">设置管理</string>
    <string name="detail_history">查看历史记录</string>
    <string name="get_contact_fail">获取联系人失败！</string>


</resources>
