<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="studyim.cn.edu.cafa.studyim.activity.login.FotgotPwdActivity">


    <FrameLayout
        android:id="@+id/body_frm_backgroud"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/body_img_backgroud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@mipmap/main_bg" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="@dimen/x160"
                android:layout_height="@dimen/y100"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dip"
                android:src="@mipmap/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:orientation="vertical">

                <tools.com.lvliangliang.wuhuntools.ui.ClearWriteEditText
                    android:id="@+id/student_num"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/et_bg_normal"
                    android:drawablePadding="4dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/study_num"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCFFFFFF"
                    android:textSize="14sp" />

                <tools.com.lvliangliang.wuhuntools.ui.ClearWriteEditText
                    android:id="@+id/phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/et_bg_normal"
                    android:drawablePadding="4dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/phone_num"
                    android:maxLength="11"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCFFFFFF"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <tools.com.lvliangliang.wuhuntools.ui.ClearWriteEditText
                        android:id="@+id/reg_code"
                        android:layout_width="0dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="7"
                        android:background="@color/et_bg_normal"
                        android:drawablePadding="5dip"
                        android:hint="@string/sms_code"
                        android:inputType="number"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:textColor="#FFF"
                        android:textColorHint="#FFFFFF" />

                    <Button
                        android:id="@+id/reg_getcode"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="4"
                        android:background="@drawable/btn_red_normal"
                        android:clickable="false"
                        android:minHeight="1dp"
                        android:minWidth="1dp"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/to_send_code"
                        android:textColor="#FFF"
                        android:textSize="12sp" />

                </LinearLayout>

                <tools.com.lvliangliang.wuhuntools.ui.ClearWriteEditText
                    android:id="@+id/new_pwd"
                    android:layout_width="fill_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/et_bg_normal"
                    android:drawablePadding="@dimen/dp_4"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/new_pwd"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/dp_5"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCFFFFFF"
                    android:textSize="14sp" />

                <tools.com.lvliangliang.wuhuntools.ui.ClearWriteEditText
                    android:id="@+id/again_new_pwd"
                    android:layout_width="fill_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/et_bg_normal"
                    android:drawablePadding="@dimen/dp_4"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/Confirm_pwd"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/dp_5"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCFFFFFF"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:background="@drawable/btn_red_selector"
                android:text="@string/positive"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

