<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="studyim.cn.edu.cafa.studyim.activity.login.LoginActivity">

    <FrameLayout
        android:id="@+id/body_frm_backgroud"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/body_img_backgroud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@mipmap/main_bg" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/ll_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="@dimen/x160"
            android:layout_height="@dimen/y100"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dip"
            android:src="@mipmap/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dip"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg_selector"
                android:drawablePadding="@dimen/dp_4"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:src="@mipmap/main_et_num" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp_5"
                        android:background="@color/white" />

                    <tools.com.lvliangliang.wuhuntools.ui.ClearWriteEditText
                        android:id="@+id/et_login_num"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:background="@null"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/input_num_or_phone"
                        android:inputType="phone"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:padding="6dp"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#CCFFFFFF"
                        android:textSize="@dimen/text_size_2" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:background="@drawable/edit_text_bg_selector"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:src="@mipmap/main_et_psw" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp_5"
                        android:background="@color/white" />

                    <tools.com.lvliangliang.wuhuntools.ui.ClearWriteEditText
                        android:id="@+id/et_login_pwd"
                        android:layout_width="fill_parent"
                        android:layout_height="36dp"
                        android:background="@null"
                        android:drawablePadding="@dimen/dp_4"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="@dimen/dp_5"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#CCFFFFFF"
                        android:textSize="@dimen/text_size_2" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:background="@drawable/btn_red_selector"
            android:text="@string/Login"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login_sign">

            <TextView
                android:id="@+id/tv_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/regist"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone"/>


            <TextView
                android:id="@+id/tv_login_query_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:autoLink="all"
                android:padding="15dp"
                android:text="@string/forgot_pwd"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_more"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:text="@string/preview_app"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_2" />

</RelativeLayout>
