<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="studyim.cn.edu.cafa.studyim.activity.rong.ConversationListActivity">

    <include layout="@layout/head_title_bar" />

    <LinearLayout
        android:id="@+id/ll_sub_title"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/rl_tab_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/chat"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="14sp" />
        </RelativeLayout>
        <View style="@style/yLine" />

        <RelativeLayout
            android:id="@+id/rl_tab_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/bulletin"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="14sp" />
        </RelativeLayout>
        <View style="@style/yLine" />

        <RelativeLayout
            android:id="@+id/rl_tab_active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/events"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/conversation_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <!--<fragment-->
        <!--android:id="@+id/conversation"-->
        <!--android:name="io.rong.imkit.fragment.ConversationFragment"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->

</android.support.v7.widget.LinearLayoutCompat>
